deployment-work3-front.yaml
# work3-front-deployment-service.yaml
# Define o Deployment para a aplicação work3-front e o Service interno (ClusterIP) para acessá-la.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: work3-front
  namespace: work3-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: work3-front
  template:
    metadata:
      labels:
        app: work3-front
        version: v1.0
    spec:
      dnsPolicy: ClusterFirst # Garante que as consultas DNS para nomes de serviço do Kubernetes
      # sejam resolvidas pelo DNS do cluster (CoreDNS).
      containers:
        - name: work3-front
          image: engrocha1/work3-front:v1.0 # Alterado para usar a imagem pública do Docker Hub
          ports:
            - containerPort: 3000 # Porta em que o contêiner do front-end escuta.
              name: http
              protocol: TCP
          resources:
            requests:
              cpu: "0.2"
              memory: "512Mi"
            limits:
              cpu: "0.2"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: work3-front-service
  namespace: work3-app
spec:
  selector:
    app: work3-front # Seleciona os Pods com o label app=work3-front.
  ports:
    - protocol: TCP
      port: 3000 # Porta externa do Service (dentro do cluster).
      targetPort: 3000 # Porta interna do contêiner.
  type: ClusterIP # Expõe o Service apenas dentro do cluster Kubernetes.
