deployment_mysql_phpmyadmin.yaml
# deployment_mysql_phpmyadmin.yaml
#
# Este arquivo YAML define os Deployments, Services, PersistentVolumeClaim (PVC),
# StorageClass e PersistentVolume (PV) necessários para implantar um servidor
# MySQL e uma interface de administração phpMyAdmin em um cluster Kubernetes.
#
# Cada seção é explicada abaixo:

# ------------------------------------------------------------------------------
# SEÇÃO: Deployment do MySQL (mysql-db)
# ------------------------------------------------------------------------------
#
# Define um Deployment para o servidor MySQL. Um Deployment garante que um número
# desejado de réplicas de um pod estejam em execução e fornece atualizações
# declarativas para os pods.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-db
  namespace: work3-app
spec:
  replicas: 1 # Define que apenas uma instância do pod MySQL será executada.
  selector:
    matchLabels:
      app: mysql-db # Seleciona os pods com o rótulo 'app: mysql-db'.
  template:
    metadata:
      labels:
        app: mysql-db
        version: latest # Rótulo para identificar a versão do pod.
    spec:
      dnsPolicy: ClusterFirst # Configura a política de DNS para usar o DNS do cluster primeiro.
      containers:
        - name: mysql-db # Nome do container dentro do pod.
          image: engrocha1/mysql:latest # A imagem Docker a ser usada para o MySQL.
          ports:
            - containerPort: 3306 # Expõe a porta padrão do MySQL no container.
          volumeMounts:
            # Monta volumes no container para persistência de dados e certificados SSL.
            - name: mysql-data
              mountPath: /var/lib/mysql # Monta o volume persistente para os dados do MySQL.
            - name: mysql-certs
              mountPath: /etc/mysql/ssl/ # Monta o ConfigMap com os certificados SSL.
              readOnly: true # Monta o volume como somente leitura por segurança.
          resources:
            # Define os recursos solicitados e limites para o container MySQL.
            requests:
              cpu: "0.2"
              memory: "512Mi"
            limits:
              cpu: "0.3"
              memory: "512Mi"
          livenessProbe:
            # Define um probe de liveness para verificar se o container MySQL está rodando.
            tcpSocket:
              port: 3306 # Verifica a conectividade na porta do MySQL.
            initialDelaySeconds: 15 # Atraso inicial antes de iniciar o probe.
            periodSeconds: 10 # Intervalo entre as verificações do probe.
          readinessProbe:
            # Define um probe de readiness para verificar se o container MySQL está pronto para aceitar tráfego.
            tcpSocket:
              port: 3306 # Verifica a conectividade na porta do MySQL.
            initialDelaySeconds: 5 # Atraso inicial antes de iniciar o probe.
            periodSeconds: 5 # Intervalo entre as verificações do probe.
      volumes:
        # Define os volumes que serão montados nos containers do pod.
        - name: mysql-data
          persistentVolumeClaim:
            claimName: mysql-pvc # Utiliza o PersistentVolumeClaim 'mysql-pvc' para o armazenamento de dados.
        - name: mysql-certs
          configMap:
            name: mysql-ca-cert # Utiliza o ConfigMap 'mysql-ca-cert' para fornecer os certificados SSL.

---
# ------------------------------------------------------------------------------
# SEÇÃO: Service do MySQL (mysql-service)
# ------------------------------------------------------------------------------
#
# Define um Service para expor o Deployment do MySQL dentro do cluster Kubernetes.
# Um Service fornece um endereço IP estável e um nome DNS para acessar os pods.
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: work3-app
spec:
  selector:
    app: mysql-db # Seleciona os pods com o rótulo 'app: mysql-db' para rotear o tráfego.
  ports:
    - protocol: TCP
      port: 3306 # A porta na qual o Service é acessível dentro do cluster.
      targetPort: 3306 # A porta na qual os pods estão ouvindo.
  type: ClusterIP # Expõe o Service em um IP interno do cluster, tornando-o acessível apenas de dentro do cluster.

---
# ------------------------------------------------------------------------------
# SEÇÃO: Deployment do phpMyAdmin (phpmyadmin)
# ------------------------------------------------------------------------------
#
# Define um Deployment para a interface de administração phpMyAdmin.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin
  namespace: work3-app
spec:
  replicas: 1 # Define que apenas uma instância do pod phpMyAdmin será executada.
  selector:
    matchLabels:
      app: phpmyadmin # Seleciona os pods com o rótulo 'app: phpmyadmin'.
  template:
    metadata:
      labels:
        app: phpmyadmin
        version: v.1.0 # Rótulo para identificar a versão do pod.
    spec:
      dnsPolicy: ClusterFirst # Configura a política de DNS para usar o DNS do cluster primeiro.
      containers:
        - name: phpmyadmin # Nome do container dentro do pod.
          image: engrocha1/phpmyadmin:latest # A imagem Docker a ser usada para o phpMyAdmin.
          ports:
            - containerPort: 80 # Expõe a porta padrão do HTTP no container.
          resources:
            # Define os recursos solicitados e limites para o container phpMyAdmin.
            requests:
              cpu: "0.1"
              memory: "128Mi"
            limits:
              cpu: "0.1"
              memory: "128Mi"
          livenessProbe:
            # Define um probe de liveness para verificar se o container phpMyAdmin está rodando.
            httpGet:
              path: / # Verifica a resposta da página inicial.
              port: 80
            initialDelaySeconds: 15 # Atraso inicial antes de iniciar o probe.
            periodSeconds: 10 # Intervalo entre as verificações do probe.
          readinessProbe:
            # Define um probe de readiness para verificar se o container phpMyAdmin está pronto para aceitar tráfego.
            httpGet:
              path: / # Verifica a resposta da página inicial.
              port: 80
            initialDelaySeconds: 5 # Atraso inicial antes de iniciar o probe.
            periodSeconds: 5 # Intervalo entre as verificações do probe.
          volumeMounts:
            # Monta o volume com os certificados SSL para o phpMyAdmin.
            - name: mysql-certs
              mountPath: /etc/mysql/ssl/ # Monta o ConfigMap com os certificados SSL.
              readOnly: true # Monta o volume como somente leitura por segurança.
      volumes:
        # Define os volumes que serão montados nos containers do pod.
        - name: mysql-certs
          configMap:
            name: mysql-ca-cert # Utiliza o ConfigMap 'mysql-ca-cert' para fornecer os certificados SSL.

---
# ------------------------------------------------------------------------------
# SEÇÃO: Service do phpMyAdmin (phpmyadmin-service)
# ------------------------------------------------------------------------------
#
# Define um Service para expor o Deployment do phpMyAdmin dentro do cluster Kubernetes.
# Este Service tornará o phpMyAdmin acessível através de um IP interno do cluster.
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin-service
  namespace: work3-app
spec:
  selector:
    app: phpmyadmin # Seleciona os pods com o rótulo 'app: phpmyadmin' para rotear o tráfego.
  ports:
    - protocol: TCP
      port: 80 # A porta na qual o Service é acessível dentro do cluster.
      targetPort: 80 # A porta na qual os pods estão ouvindo.
  type: ClusterIP # Expõe o Service em um IP interno do cluster, tornando-o acessível apenas de dentro do cluster.
