deployment_work3.yaml
# work3-app-deployment-service.yaml
# Define o Deployment para a aplicação work3-app e o Service interno (ClusterIP) para acessá-la.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: work3-app
  namespace: work3-app
  annotations:
    kubernetes.io/change-cause: "Laçamento de nova imagem image to v22.0.13 - Using public image from Docker Hub"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: work3-app
  template:
    metadata:
      labels:
        app: work3-app
        version: v22.0.13
    spec:
      dnsPolicy: ClusterFirst # Adicionado dnsPolicy: ClusterFirst
      containers:
        - name: work3-app
          image: engrocha1/work3-app:v22.0.13 # Referência direta à imagem pública no Docker Hub
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          resources:
            requests:
              cpu: "0.2"
              memory: "512Mi"
            limits:
              cpu: "0.2"
              memory: "512Mi" #Reduzido de 1Gi
      # imagePullSecrets: # Removido pois a imagem é pública
      #   - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: work3-service
  namespace: work3-app
spec:
  selector:
    app: work3-app
  ports:
    - protocol: TCP
      port: 8080 # Porta externa (dentro do cluster)
      targetPort: 8080 # Porta do contêiner
  type: ClusterIP # Serviço interno ao cluster
